@@ -1,3 +1,5 @@
+if not TukuiAutoRepair = true then return end
+
 --------------------------------------------------------------------
 -- CREDIT : FatalEntity 
 --------------------------------------------------------------------
