@@ -43,7 +43,7 @@ cbicons = true 								-- castbar icons
 auratimer = false 							-- true to enable timer aura on player or target
 auratextscale = 11 							-- set font size on aura
 PlayerDebuffs = false						-- enable debuff on playerframe (it was a request) :x
-TargetBuffs = true 							-- true to disable oUF buffs on the target frame
+TargetBuffs = true 							-- false to disable oUF buffs on the target frame
 lowThreshold = 20 							-- low mana threshold for all mana classes
 highThreshold = 80 							-- high mana treshold for hunters
 targetpowerpvponly = true 					-- mana text on pvp enemy target only
